# finance-hub

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  cli.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  working-doc.md
.sandcastle/: .env.example  Dockerfile  main.mts  merge-prompt.md  quota.mts  quota.test.mts  review-prompt.md
core/: models.py  registry.py  store.py  tools.py
docs/adr/: 0001-use-finance-only-tool-runtime.md  0002-split-structured-facts-from-research-prose.md  0003-separate-research-strategy-and-market-data.md  0004-use-canonical-portfolio-snapshots-for-account-state.md  0005-deterministic-tools-as-foundation-skills-as-orchestration-layer.md  (+2 more)
docs/agents/: domain.md  (+1 more)
notes/: vault-inventory.md
tests/: helpers.py  test_bootstrap.py  test_deployment_plan_migration.py  test_e2e_chain.py  test_envelope.py  test_factories.py  test_fidelity_portfolio_csv_adapter.py  test_finance_check.py  test_freshness_bands.py  test_fundamentals.py  test_fundamentals_http.py  test_generate_deployment_plan.py  test_import_portfolio_csv_tool.py  test_market_data_migrations.py  test_market_data_prices.py  test_market_data_snapshot.py  test_metrics.py  test_migrations.py  test_money.py  test_output_mode_ladder.py  test_plan_approval.py  test_portfolio_snapshot_migration.py  test_portfolio_weights.py  test_promote_to_strategy.py  test_research_evidence.py  test_research_instruments.py  test_research_notes.py  test_research_schema.py  test_research_sources.py  test_research_themes.py  test_strategy_migration.py  test_yfinance_provider.py
(+143 files in other folders)
