[project]
name = "hub-hub"
version = "0.1.0"
description = "Shared core + per-hub capabilities exposed as CLI and MCP tools (outreach, search, research, finance)."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "typer>=0.12",
    "mcp>=1.2",
]

[project.scripts]
hub = "cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "mcp_server"]
packages = ["core", "hubs", "hubs.outreach", "hubs.search", "hubs.research", "hubs.finance"]
