[project]
name = "finance-hub"
version = "0.1.0"
description = "Finance-focused agent tools exposed through CLI and MCP."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "mcp>=1.2",
]

[project.optional-dependencies]
market-data = [
    "yfinance>=0.2",
]
analysis = [
    "numpy>=2",
    "pandas>=2",
]
dev = [
    "pytest>=8",
]

[project.scripts]
finance = "finance_hub.cli:app"
finance-mcp = "finance_hub.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: hits a real network/provider; opt-in, excluded from the default suite (run with -m live)",
]
